--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -1,3 +1,4 @@
+
 .loadingIndex {
   margin: auto;
   text-align: center;
@@ -16,8 +17,13 @@
 .navbar {
   /* display: flex; */
   /* position: fixed; */
+  /* display: float; */
+  position: sticky;
   height: 51rem;
-  width: 13rem;
+  flex-grow: 1;
+  flex-basis: 300px;
+  --offset: 0;
+  top: var(--offset);
   background: linear-gradient(196deg, rgba(125,81,17,1) 0%, rgba(240,218,81,1) 96%);
 }
 .navbar > * {
@@ -119,4 +125,25 @@ table.tblOddEven > tbody > tr:hover {
  gap: 20px 10px;
  width: 100%;
  grid-template-columns: auto auto;
+}
+
+.mapContainer {
+  width: 100%;
+  height: 30rem;
+  margin-top: 2rem;
+}
+.loadingContainer{
+  position: fixed;
+  width: 100rem;
+  height: 100%;
+  background: rgba(182, 181, 181, 0.479);
+  z-index: 15;
+  margin: auto;
+}
+.loadingContainer > .innerLoading{
+  /* margin: 50% !important; */
+  top: 50%;
+  left: 50%;
+  position: relative;
+  z-index: 15;
 }
